# FourFish

./: .clang-format  CMakeLists.txt  README.md
include/: BitBoard.hpp  Engine.hpp  TUI.hpp
src/: BitBoard.cpp  Engine.cpp  TUI.cpp  main.cpp
